fix: fix layout issues ICD-519

--- a/src/Styles/components/listagem/_category-list.scss
+++ b/src/Styles/components/listagem/_category-list.scss
@@ -1,8 +1,11 @@
 body.departamento,
 body.categoria {
     .category-list {
-        background-color: #fcfcfc;
-        padding-left: 25px;
+
+        ul {
+            background-color: #fcfcfc;
+            padding: 15px 0 15px 25px;
+        }
 
         li {
             margin: 10px 0;
@@ -13,6 +16,7 @@ body.categoria {
         }
 
         @include breakpoint ('medium', 'max') {
+            background-color: #fcfcfc;
             padding-left: 45px
         }
     }
