--- a/src/Styles/components/listagem/_filters.scss
+++ b/src/Styles/components/listagem/_filters.scss
@@ -521,7 +521,7 @@ body.departamento {
 			border-bottom: 2px solid #9aca3c;
 			font-size: 1rem;
 			font-weight: 700;
-			margin: 50px 0 0;
+			margin: 20px 0 0;
 			padding-bottom: 2px;
 
 			&:first-of-type {
